--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-        <script src="http://nvd3.org/assets/js/nv.d3.js" charset="utf-8"></script>
+        <script src="https://nvd3.org/assets/js/nv.d3.js" charset="utf-8"></script>
         <script src="timeline.js" charset="utf-8"></script>
         <script src="d3.legend.js" charset="utf-8"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.6.7/d3-tip.js">     </script>
