change http to https --wysu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="timeline.js" charset="utf-8"></script>
         <script src="d3.legend.js" charset="utf-8"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.6.7/d3-tip.js">     </script>
-        <link rel="stylesheet" type="text/css" href="http://nvd3.org/assets/css/nv.d3.css">
+        <link rel="stylesheet" type="text/css" href="https://nvd3.org/assets/css/nv.d3.css">
         <link rel="stylesheet" type="text/css" href="timeline.css">
         <title>Cathay user Sequence Visualization</title> 
         <!-- Dynamic Scatterplot -->
